--- a/Security-Resource/src/main/resources/application.properties
+++ b/Security-Resource/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.port=8113
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://124.222.85.139:3306/demo?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
 spring.datasource.username=root
-spring.datasource.password=whaleshub@2022
+spring.datasource.password=123456
