--- a/Authorization-Server/src/main/resources/application.properties
+++ b/Authorization-Server/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.port=8112
 #spring.security.user.password=atguigu
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://124.222.85.139:3306/demo?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+spring.datasource.url=jdbc:mysql://124.222.85.13:3306/demo?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
 spring.datasource.username=root
-spring.datasource.password=whaleshub@2022
+spring.datasource.password=123456
 spring.main.allow-bean-definition-overriding=true
+spring.datasource.hikari.max-lifetime=30000
